--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "core-js": "^3.6.5",
     "epubjs": "^0.3.71",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.22.1",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "web-storage-cache": "^1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
