--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "epubjs": "^0.3.71",
+    "localforage": "^1.9.0",
     "vue": "^2.6.11",
+    "vue-create-api": "^0.2.3",
     "vue-i18n": "^8.22.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
