--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-create-api": "^0.2.3",
     "vue-i18n": "^8.22.1",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "web-storage-cache": "^1.1.1"
